--- a/main.html
+++ b/main.html
@@ -8,8 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<script type="text/javascript" src="./script.js">
+	</script>
+	<h1>
+		Why I want to become a developer?
+	</h1>
+	<p>
+		Software development has become a popular career choice for skilled engineers around the world. It is
+		undoubtedly a booming industry that offers great career choices. There are endless opportunities and the decent
+		pay that software developers can command across the world.
+	</p>
 
 </body>
 
