--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="./script.js">
 	</script>
 	<h1>
-		"Why I want to become a developer?"
+		'Why I want to become a developer?'
 	</h1>
 	<p>
 		Software development has become a popular career choice for skilled engineers around the world. It is
