--- a/main.html
+++ b/main.html
@@ -10,14 +10,10 @@
 	<!-- the entire body must be written by the student -->
 	<script type="text/javascript" src="./script.js">
 	</script>
-	<h1>
-		Why I want to become a developer?
-	</h1>
-	<p>
-		Software development has become a popular career choice for skilled engineers around the world. It is
+	<h1>Why I want to become a developer?</h1>
+	<p>Software development has become a popular career choice for skilled engineers around the world. It is
 		undoubtedly a booming industry that offers great career choices. There are endless opportunities and the decent
-		pay that software developers can command across the world.
-	</p>
+		pay that software developers can command across the world.</p>
 
 </body>
 
